--- a/nlp-parent/nlp-fsm/pom.xml
+++ b/nlp-parent/nlp-fsm/pom.xml
@@ -13,6 +13,21 @@
 
 	<dependencies>
 		<dependency>
+		  <groupId>javax.xml.bind</groupId>
+		  <artifactId>jaxb-api</artifactId>
+		  <version>2.3.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.sun.xml.bind</groupId>
+		  <artifactId>jaxb-core</artifactId>
+		  <version>2.3.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.sun.xml.bind</groupId>
+		  <artifactId>jaxb-impl</artifactId>
+		  <version>2.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>vn.hus</groupId>
 			<artifactId>nlp-utils</artifactId>
 			<version>1.0.0</version>
